--- a/main.css
+++ b/main.css
@@ -16,9 +16,52 @@
     font-size: 200px;
 }
 
+.logo-small{
+    color: #f4511e;
+    font-size: 50px;
+}
+
+.thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+}
+
+.thumbnail img {
+    width: 30%;
+    height: 50%;
+    margin: 0 0 10px;
+}
+
 @media screen and (max-width: 768px){
     .col-sm4{
         text-align: center !important;
         margin: 25px 0 !important;
     }
+}
+
+
+.carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #f4511e;
+}
+
+.carousel-indicators li {
+    border-color: #f4511e;
+}
+
+.carousel-indicators li.active {
+    background-color: #f4511e;
+}
+
+.item h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    margin: 70px 0;
+}
+
+.item span {
+    font-style: normal;
 }
