--- a/main.css
+++ b/main.css
@@ -17,6 +17,11 @@
     font-size: 200px;
 }
 
+.logo-mid {
+    color: #f4511e;
+    font-size:  100px;
+}
+
 .logo-small{
     color: #f4511e;
     font-size: 50px;
@@ -41,20 +46,6 @@
     }
 }
 
-
-.carousel-control.right, .carousel-control.left {
-    background-image: none;
-    color: #f4511e;
-}
-
-.carousel-indicators li {
-    border-color: #f4511e;
-}
-
-.carousel-indicators li.active {
-    background-color: #f4511e;
-}
-
 .item h4 {
     font-size: 19px;
     line-height: 1.375em;
@@ -66,7 +57,6 @@
 .item span {
     font-style: normal;
 }
-
 
 .panel {
     border: 1px solid #f4511e;
@@ -85,12 +75,21 @@
     color: #f4511e !important;
 }
 
-/*.panel > .panel-heading {
-    background-image: none;
-    background-color: red;
-    color: white;
+.col-sm-4 .btn {
+    margin: 15px 0;
+    background-color: #f4511e !important;
+    color: #fff !important;
+}
 
-}*/
+.col-sm-4 .btn:hover{
+      border: 1px solid #f4511e;
+    background-color: #fff !important;
+    color: #f4511e !important;
+}
+
+.img-small{
+    width: 30px;
+}
 
 .panel > .panel-heading {
     background-image: none;
@@ -102,7 +101,7 @@
     border-top-right-radius: 0px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
-}*/
+}
 
 .panel-footer {
     background-color: #fff !important;
@@ -138,6 +137,6 @@
 }
 
 .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #f4511e !important;
+    color: #f4511e !important;
     background-color: #fff !important;
 }
